@@ -1,3 +1,5 @@
+2008-09-06 Added 5-point star marker to plot command - EF
+
 2008-09-05 Fix hatching in PS backend - MGD
 
 2008-09-03 Fix log with base 2 - MGD
